--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,11 @@
     background: linear-gradient(to right, #022e34, #00c16c, #8fff18);
     display: flex;
     flex-direction: column;
-    color: white;
   }
 
   .page-container2 {
     margin-top: 100px;
+
   }
 
   .header {
@@ -28,9 +28,11 @@
     align-items: center;
     justify-content: center;
     height: 80px; /* Altura do menu */
-    background-color: #f8f8f8; /* Cor de fundo */
+    background-color: transparent; /* Cor de fundo */
     border-bottom: 1px solid #ddd;
+    border: none;
     z-index: 1;
+    margin-bottom: 0;
   }
 
   .logo {
@@ -52,6 +54,7 @@
     padding: 40px;
     margin-left: 150px;
     font-family: 'Montserrat Alternates', sans-serif;
+    margin-top: 0;
   }
   
   /* Texto */
@@ -172,6 +175,7 @@
     display: flex;
     list-style: none;
     gap: 20px;
+    margin-right: 50px;
   }
   
   .nav-list li {
@@ -180,12 +184,17 @@
   
   .nav-list a {
     text-decoration: none;
-    color: #0c0c0c;
+    color: #fafafa;
     font-weight: bold;
     font-size: 16px;
     transition: color 0.3s ease;
+    margin-left: 20px;
   }
   
   .nav-list a:hover {
-    color: #007BFF; /* Mude para a cor desejada */
+    color: #022e34; /* Mude para a cor desejada */
+  }
+
+  #sobre {
+    scroll-margin-top: 200px; /* Ajuste o valor para corresponder à altura do header */
   }
