--- a/src/App.css
+++ b/src/App.css
@@ -1,209 +1,212 @@
 @font-face {
-    font-family: 'Uni Wars';
-    src: url('./assets/fonts/uniwars.otf') format('truetype'); 
-  }
+  font-family: "Uni Wars";
+  src: url("./assets/fonts/uniwars.otf") format("truetype");
+}
 
-  html {
-    scroll-behavior: smooth;
-  }
+html {
+  scroll-behavior: smooth;
+}
 
+.page-container {
+  overflow: scroll;
+  height: 100vh; /* Altura total da viewport */
+  width: 100vw; /* Largura total da viewport */
+  background: linear-gradient(to right, #022e34, #00c16c, #8fff18);
+  display: flex;
+  flex-direction: column;
+}
 
-  .page-container {
-    overflow:scroll;
-    height: 100vh; /* Altura total da viewport */
-    width: 100vw; /* Largura total da viewport */
-    background: linear-gradient(to right, #022e34, #00c16c, #8fff18);
-    display: flex;
-    flex-direction: column;
-  }
+.page-container2 {
+  margin-top: 100px;
+}
 
-  .page-container2 {
-    margin-top: 100px;
+.header {
+  position: relative; /* Define um contêiner de referência */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80px; /* Altura do menu */
+  background-color: transparent; /* Cor de fundo */
+  border-bottom: 1px solid #ddd;
+  border: none;
+  z-index: 1;
+  margin-bottom: 0;
+}
 
-  }
+.logo {
+  position: absolute; /* Faz a logo sobrepor os botões */
+  top: 50%; /* Centraliza verticalmente */
+  left: 20px; /* Distância da borda esquerda */
+  transform: translateY(-50%); /* Ajusta a centralização vertical */
+  font-size: 40px; /* Tamanho da fonte */
+  font-weight: bold;
+  color: #fafafa; /* Cor da logo */
+  z-index: 10; /* Garante que a logo fique acima dos botões */
+  font-family: "Uni Wars", sans-serif;
+}
 
-  .header {
-    position: relative; /* Define um contêiner de referência */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 80px; /* Altura do menu */
-    background-color: transparent; /* Cor de fundo */
-    border-bottom: 1px solid #ddd;
-    border: none;
-    z-index: 1;
-    margin-bottom: 0;
-  }
+.main-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: top;
+  padding: 40px;
+  margin-left: 100px;
+  font-family: "Montserrat Alternates", sans-serif;
+  margin-top: 6rem;
+}
 
-  .logo {
-    position: absolute; /* Faz a logo sobrepor os botões */
-    top: 50%; /* Centraliza verticalmente */
-    left: 20px; /* Distância da borda esquerda */
-    transform: translateY(-50%); /* Ajusta a centralização vertical */
-    font-size: 24px; /* Tamanho da fonte */
-    font-weight: bold;
-    color: #fafafa; /* Cor da logo */
-    z-index: 10; /* Garante que a logo fique acima dos botões */
-    font-family: "Uni Wars", sans-serif;
-  }
+/* Texto */
+.text-section h1 {
+  margin-top: 5rem;
+  font-size: 3rem;
+}
 
-  .main-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: top;
-    padding: 40px;
-    margin-left: 150px;
-    font-family: 'Montserrat Alternates', sans-serif;
-    margin-top: 0;
-  }
-  
-  /* Texto */
-  .text-section h1 {
-    font-size: 3.5rem;
-  }
-  
-  .image-section img {
-    position: relative;
-    margin-top: -100px;
-    width: 750px;
-  }
+.image-section img {
+  position: relative;
+  margin-top: -100px;
+  width: 600px;
+}
 
-  .page-container {
-    height: 100vh; /* Altura total da viewport */
-    width: 100vw; /* Largura total da viewport */
-    background: linear-gradient(to right, #022e34, #00c16c, #8fff18);
-    display: flex;
-    flex-direction: column;
-    color: white;
-  }
+.page-container {
+  height: 100vh; /* Altura total da viewport */
+  width: 100vw; /* Largura total da viewport */
+  background: linear-gradient(to right, #022e34, #00c16c, #8fff18);
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
 
-  .Sobre-1 {
-    display: flex;
-    padding: 40px;
-    margin-left: 570px;
-    margin-top: -160px;
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-size: 1.4rem;
-  }
+.Sobre-1 {
+  display: flex;
+  padding: 40px;
+  margin-left: 570px;
+  margin-top: -160px;
+  font-family: "Montserrat Alternates", sans-serif;
+  font-size: 1.4rem;
+}
 
-  .descricao {
-    margin-top: -40px;
-    margin-left: 700px;
-    font-size: 1rem;
-    line-height: 1.5;
-    text-align: justify;
-    max-width: 40%;
-    font-family: "poppins", sans-serif;
-  }
+.descricao {
+  margin-top: -40px;
+  margin-left: 700px;
+  font-size: 1rem;
+  line-height: 1.5;
+  text-align: justify;
+  max-width: 40%;
+  font-family: "poppins", sans-serif;
+  font-size: 1.5rem;
+}
 
-  .Laptop2 {
-    width: auto;
-    height: 400px;
-    margin-top: -200px;
-    margin-left: 40px;
-    border-radius: 50%;
-    border: 2px ;
-    box-shadow: 10px 10px 15px rgba(31, 31, 31, 0.5);
-  }
+.Laptop2 {
+  width: auto;
+  height: 400px;
+  margin-top: -280px;
+  margin-left: 100px;
+  border-radius: 50%;
+  border: 2px;
+  box-shadow: 10px 10px 15px rgba(31, 31, 31, 0.5);
+}
 
-  .about-02 {
-    font-family: "Montserrat Alternates", sans-serif;
-    font-size: 4.4rem;
-    margin-left: 120px;
-    margin-top: 160px;
-  }
+.about-02 {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-size: 4.4rem;
+  margin-left: 120px;
+  margin-top: 160px;
+}
 
-  .Menino {
-    width: auto;
-    height: 400px;
-    margin-top: -90px;
-    margin-left: 1000px;
-    border-radius: 50%;
-    border: 2px ;
-    box-shadow: 10px 10px 15px rgba(31, 31, 31, 0.5);
-  }
+.Menino {
+  width: auto;
+  height: 400px;
+  margin-top: -90px;
+  margin-left: 1000px;
+  border-radius: 50%;
+  border: 2px;
+  box-shadow: 10px 10px 15px rgba(31, 31, 31, 0.5);
+}
 
-  .descricao02 {
-    margin-top: -320px;
-    margin-left: 260px;
-    font-size: 1rem;
-    line-height: 1.5;
-    text-align: justify;
-    max-width: 40%;
-    font-family: "poppins", sans-serif;
-  }
+.descricao02 {
+  margin-top: -320px;
+  margin-left: 260px;
+  font-size: 1rem;
+  line-height: 1.5;
+  text-align: justify;
+  max-width: 40%;
+  font-family: "poppins", sans-serif;
+  font-size: 1.5rem;
+}
 
-  .aguarde {
-    margin-top: 30px;
-    margin-left: 260px;
-  }
-  
-  .about-03 {
-    font-family: "Montserrat Alternates", sans-serif;
-    font-size: 4.4rem;
-    margin-left: 120px;
-    margin-top: 160px;
-  }
+.aguarde {
+  font-size: 1.5rem;
+  margin-top: 30px;
+  margin-left: 260px;
+}
 
-  .menina {
-    width: auto;
-    height: 400px;
-    margin-top: -20px;
-    margin-left: 70px;
-    border-radius: 50%;
-    border: 2px ;
-    box-shadow: 10px 10px 15px rgba(31, 31, 31, 0.5);
-  }
+.about-03 {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-size: 4.4rem;
+  margin-left: 120px;
+  margin-top: 160px;
+}
 
-  .descricao03 {
-    margin-top: -320px;
-    margin-left: 700px;
-    font-size: 1rem;
-    line-height: 1.5;
-    text-align: justify;
-    max-width: 40%;
-    font-family: "poppins", sans-serif;
-  }
+.menina {
+  width: auto;
+  height: 400px;
+  margin-top: -20px;
+  margin-left: 100px;
+  border-radius: 50%;
+  border: 2px;
+  box-shadow: 10px 10px 15px rgba(31, 31, 31, 0.5);
+}
 
-  .page-container4 {
-    margin-top: 150px;
-  }
+.descricao03 {
+  margin-top: -320px;
+  margin-left: 700px;
+  font-size: 1rem;
+  line-height: 1.5;
+  text-align: justify;
+  max-width: 40%;
+  font-family: "poppins", sans-serif;
+}
 
-  .navbar {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .nav-list {
-    display: flex;
-    list-style: none;
-    gap: 20px;
-    margin-right: 50px;
-  }
-  
-  .nav-list li {
-    font-family: 'Poppins', sans-serif;
-  }
-  
-  .nav-list a {
-    text-decoration: none;
-    color: #fafafa;
-    font-weight: bold;
-    font-size: 16px;
-    transition: color 0.3s ease;
-    margin-left: 20px;
-  }
-  
-  .nav-list a:hover {
-    color: #022e34; /* Mude para a cor desejada */
-  }
+.page-container4 {
+  margin-top: 150px;
+}
 
-  #sobre {
-    scroll-margin-top: 200px; /* Ajuste o valor para corresponder à altura do header */
-  }
+.navbar {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
 
-  .Contato {
-    font-family: 'poppins', sans-serif;
-    margin-left: 720px;
-  }
+.nav-list {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  margin-right: 50px;
+}
+
+.nav-list li {
+  font-family: "Poppins", sans-serif;
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: #fafafa;
+  font-weight: bold;
+  font-size: 24px;
+  transition: color 0.3s ease;
+  margin-left: 20px;
+}
+
+.nav-list a:hover {
+  color: #022e34; /* Mude para a cor desejada */
+}
+
+#sobre {
+  scroll-margin-top: 200px; /* Ajuste o valor para corresponder à altura do header */
+}
+
+.Contato {
+  font-family: "poppins", sans-serif;
+  margin-left: 720px;
+  margin-top: -500px;
+}
