--- a/src/App.css
+++ b/src/App.css
@@ -260,6 +260,7 @@ html {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   max-width: 500px;
   text-align: center;
+  color: #343434;
 }
 
 .close-button {
