--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,8 @@ html {
 
 .Contato {
   font-family: "poppins", sans-serif;
-  margin-left: 720px;
+  min-width: 70%;
+  margin-left: 600px;
   margin-top: -500px;
 }
 
@@ -231,7 +232,10 @@ html {
   top: 70px;
   filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
 }
-
+.soft-modal {
+  width: 400px;
+  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
+}
 .Asset {
   position: relative;
   width: 350px;
@@ -239,6 +243,10 @@ html {
   margin-left: -15px;
   top: 30px;
   filter: drop-shadow(2px 2px 8px rgba(0, 0, 0, 0.5));
+}
+.asset-modal {
+  width: 350px;
+  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
 }
 
 .modal-overlay {
@@ -258,7 +266,8 @@ html {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-  max-width: 500px;
+  width: 50vw;
+  height: 50vh;
   text-align: center;
   color: #343434;
 }
